--- a/public/CSS/index-content.css
+++ b/public/CSS/index-content.css
@@ -15,6 +15,84 @@ h2 {
   color: black;
 }
 
+.auth-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  text-align: center;
+  font-size: 20px;
+  padding: 2rem;
+  border: 2px solid #5a46d8;
+  border-radius: 12px;
+  background-color: #f9f9ff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  padding-bottom: 1.5rem;
+
+}
+
+.button-group {
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 1rem; /* litt space mellom knappene */
+  justify-content: center;
+}
+
+.auth-message button {
+  margin: 0.5rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  background-color: #5a46d8;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.auth-message button:hover {
+  background-color: #4836b5;
+}
+
+.empty-table-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 300px; /* juster høyden etter størrelsen på tom tabell */
+}
+
+.inventory-message {
+  font-size: 20px;
+  padding: 2rem;
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.inventory-message button {
+  margin-top: 1.5rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  background-color: #5a46d8;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.inventory-message button:hover {
+  background-color: #4836b5;
+}
+
+
+
 /* Tabellen */
 table {
   width: calc(100% - 2rem); 
@@ -116,8 +194,6 @@ button {
 .category-btn.active img {
   filter: brightness(0) invert(1);
 }
-
-
 
 .inventory-container {
     max-height: 440px;  /* Du kan justere høyden etter behov */
