--- a/public/CSS/index-content.css
+++ b/public/CSS/index-content.css
@@ -29,9 +29,9 @@ h2 {
   text-align: center;
   font-size: 20px;
   padding: 2rem;
-  border: 2px solid #5a46d8;
+  border: 2px solid #ffe2bf;
   border-radius: 12px;
-  background-color: #f9f9ff;
+  background-color: white;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding-bottom: 1.5rem;
 
@@ -48,8 +48,8 @@ h2 {
   margin: 0.5rem;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
-  background-color: #5a46d8;
-  color: white;
+  background-color: #ffebbb;
+  color: black;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -57,7 +57,7 @@ h2 {
 }
 
 .auth-message button:hover {
-  background-color: #4836b5;
+  background-color: #ffde91;
 }
 
 .empty-table-wrapper {
@@ -79,7 +79,7 @@ h2 {
   margin-top: 1.5rem;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
-  background-color: #5a46d8;
+  background-color: #F1AD00;
   color: white;
   border: none;
   border-radius: 8px;
@@ -88,9 +88,12 @@ h2 {
 }
 
 .inventory-message button:hover {
-  background-color: #4836b5;
+  background-color: #d89b00;
 }
 
+#empty-inventory-message {
+  display: none;
+}
 
 
 /* Tabellen */
@@ -102,6 +105,7 @@ table {
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   border-radius: 4px;
   overflow: hidden;
+  box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 thead {
@@ -166,8 +170,8 @@ button {
  
 
 .category-btn {
-  background-color: #f1f1f1;
-  border: 2px solid #ddd;
+  background-color: #fff3d8;
+  border: 2px solid #ffe2bf;
   padding: 10px;
   border-radius: 10px;
   cursor: pointer;
@@ -177,6 +181,7 @@ button {
   justify-content: center;
   width: 60px;
   height: 60px;
+  box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1);
 }
  
 .category-btn img {
@@ -186,8 +191,8 @@ button {
  
 .category-btn:hover,
 .category-btn.active {
-  background-color: #5a46d8;
-  border-color: #5a46d8;
+  background-color: #F1AD00;
+  border-color: #F1AD00;
 }
  
 .category-btn:hover img,
@@ -212,6 +217,6 @@ button {
 .inventory-container thead th {
     position: sticky;
     top: 0;
-    background-color: #f0f0f0; /* Eller mørkere for bedre kontrast */
+    background-color: #ffebbb;
     z-index: 1;
 }
