--- a/public/CSS/about-content.css
+++ b/public/CSS/about-content.css
@@ -58,3 +58,11 @@
     aspect-ratio: 16 / 9;
   }
 }
+.video-caption {
+    max-width: 800px;
+    margin: 1rem auto 2rem auto;
+    text-align: center;
+    font-size: 1rem;
+    color: #000000;
+    line-height: 1.5;
+}
